# gcp-picker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml
.windsurf/rules/: README.md  python-rules.md
.windsurf/workflows/: update-changelog.md
data/config/: imagery_services.json
docs/ai_notes/: auto-gcp-solver.md  gui-testing-strategy.md  sensor-model-projector.md  tiling-and-pyramids.md  workflow_tests.md
docs/user-guide/: auto-edge-aligner.md  auto-gcp-workflow.md  getting-started.md  introduction.md  manual-gcp-workflow.md  orthorectification.md
scripts/: build_collection.py  generate_version.py
src/app/: __init__.py  main_window.py
src/app/core/: __init__.py  collection_manager.py  config_manager.py  gcp.py  gcp_processor.py  gdal_manager.py  gdal_reader.py  imagery_api.py  terrain.py  wms_client.py
src/app/sidebar/: __init__.py  main_sidebar.py  tabbed_sidebar.py
src/app/sidebar/components/: __init__.py  gcp_panel.py  status_panel.py  view_control_panel.py
src/app/viewers/: base_viewer.py  leaflet_reference_viewer.py  reference_viewer.py  test_image_viewer.py
src/app/widgets/: about_dialog.py  image_canvas.py  status_panel.py
src/gcp_picker/: __init__.py  __main__.py  main.py
src/pointy/: __init__.py  main.py  main_window.py  resources.py
src/pointy/apps/auto_gcp_solver/: README.md  config.py  init_utilities.py  main.py
src/pointy/apps/auto_gcp_tester/: README.md  config.py  main.py  plot.py  tile_capture.py
src/pointy/apps/auto_model_solver/: README.md  config.py  init_utilities.py  main.py  model_solver_result.py  plot.py  tile_capture.py
src/pointy/apps/model_tester/: main.py
src/pointy/apps/ortho_model_tester/: README.md  __init__.py  main.py
src/pointy/controllers/: __init__.py  auto_gcp_solver_controller.py  auto_match_controller.py  auto_model_solver_controller.py  gcp_controller.py  image_controller.py  ortho_controller.py  sync_controller.py
src/pointy/core/: __init__.py  auto_match.py  collection_manager.py  config_manager.py  constants.py  coordinate.py  datum.py  gcp.py  gcp_processor.py  gdal_manager.py  gdal_reader.py  histogram_manager.py  image_loader.py  imagery_api.py  ortho_model_persistence.py  orthorectifier.py  projector.py  qt_async_image_loader.py  terrain.py  transformation.py  wms_client.py
src/pointy/core/match/: __init__.py  candidate_set.py  extractor.py  gcp_solver_pipeline.py  matcher.py  outlier_filter.py  pipeline.py  types.py
src/pointy/core/match/algo1/: __init__.py
src/pointy/core/match/edge_alignment/: __init__.py  edge_aligner.py  ga_optimizer.py  sobel_edges.py
src/pointy/sidebar/: __init__.py  activity_bar_sidebar.py  icon_bar.py  main_sidebar.py  tabbed_sidebar.py
src/pointy/sidebar/components/: __init__.py  auto_gcp_solver_panel.py  auto_match_panel.py  auto_model_solver_panel.py  collection_nav_panel.py  gcp_panel.py  metadata_panel.py  status_panel.py  tools_panel.py  transformation_status_panel.py  view_control_panel.py
src/pointy/viewers/: __init__.py  base_viewer.py  leaflet_reference_viewer.py  reference_viewer.py  test_image_viewer.py
src/pointy/widgets/: __init__.py  about_dialog.py  gcp_manager.py  graphics_image_view.py  image_canvas.py  splash_screen.py  status_panel.py  zoom_controls.py
test/: __init__.py  conftest.py
test/integration/: __init__.py  test_camera_integration.py  test_coordinate_comparisons.py  test_ga_fitness_single.py  test_rpc_tps_integration.py  test_terrain_integration.py
test/smoke/: test_imports.py
test/unit/: __init__.py  test_coordinate.py  test_naming.py  test_projector.py  test_terrain.py
test/unit/gui/: test_gcp_loading.py
